Implementing bearer auth with sample api. We should remove sample api when we start using BearerSecurity for any api.
